# crawl

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  server.py
docs/: cli.md  feature-notes.md  mcp.md  overview.md  sdk.md
src/crawl/: __init__.py
src/crawl/cli/: __init__.py  __main__.py  main.py  output.py
src/crawl/mcp/: __init__.py  __main__.py  app.py  config.py  helpers.py  models.py  prompts.py  resources.py
src/crawl/mcp/tools/: __init__.py  capture.py  extract.py  page.py  search.py  site.py
src/crawl/sdk/: __init__.py  api.py  app_state.py  article.py  article_metadata.py  article_pagination.py  autoscale.py  benchmark.py  browser.py  cache.py  chunking.py  consent.py  contacts.py  cookies.py  crawl_state.py  dataset.py  discovery.py  extract.py  feeds.py  forms.py  google.py  hooks.py  page.py  proxy.py  resource_blocking.py  scrape.py  searxng.py  similarity.py  tech.py  urlnorm.py  whatweb_import.py
src/crawl/sdk/data/: plugin_signatures.json
